package NDnnProto;


message TRegressionCostConst {
	optional double LearningRate = 1;
}

